--- a/src/assets/styles/reset.css
+++ b/src/assets/styles/reset.css
@@ -109,6 +109,7 @@ section {
 
 body {
     line-height: 1;
+    overflow-x: hidden;
 }
 
 ol,
@@ -132,4 +133,13 @@ q:after {
 table {
     border-collapse: collapse;
     border-spacing: 0;
+}
+
+img {
+    width: 100%;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
 }
