It's almost done🍀

--- a/src/assets/styles/common.less
+++ b/src/assets/styles/common.less
@@ -126,3 +126,13 @@
     }
   }
 }
+
+.c_des {
+  margin: 20px;
+  opacity: 0.6;
+  font-size: 13px;
+  color: #fff;
+  letter-spacing: 0;
+  line-height: 26px;
+  white-space: pre-wrap;
+}
